force-app/main/default/objects/Demo_Scorecard__c/Demo_Scorecard__c.object-meta.xml
<CustomObject>
    <label>Demo Scorecard</label>
    <nameField>
        <label>Demo Scorecard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Scorecards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>