force-app/main/default/objects/Demo_Scorecard__c/fields/Demo__c.field-meta.xml
<CustomField>
    <fullName>Demo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demo</label>
    <referenceTo>Demo__c</referenceTo>
    <relationshipLabel>Demo Scorecards</relationshipLabel>
    <relationshipName>Demo_Scorecards</relationshipName>
    <type>Lookup</type>
</CustomField>